[project]
name = "llm-p"
version = "0.1.0"
description = "FastAPI service with JWT auth, SQLite, and OpenRouter LLM proxy"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    # Validation & Settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # HTTP Client
    "httpx>=0.27.0",
    # Forms (для OAuth2PasswordRequestForm)
    "python-multipart>=0.0.9",
    "ruff>=0.15.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    # pytest>=8.0.0,  # можно добавить позже
]
